Configured GitLab and codedoc.
Recompiled markdown file and updated gododoc config to most recent version.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,3 +4,12 @@ test:
   stage: test
   script:
     - godot goldenGadget/GGTestsRunner.tscn
+
+pages:
+  script:
+    - cp -r docs/dist public
+  artifacts:
+    paths:
+      - public
+  only:
+    - master
