--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,8 @@ test:
 
 pages:
   script:
-    - cp -r docs/dist public
+    - mkdir public
+    - cp -r docs/dist/* docs/assets/* public
   artifacts:
     paths:
       - public
